--- a/src/App.css
+++ b/src/App.css
@@ -38,8 +38,9 @@
 	flex-direction: row;
 	align-items: center;
 	margin-top: 5%;
-	max-height: 100%;
-	overflow-y: auto;
+	/* max-height: 100%;
+	min-height: 40%;
+	overflow-y: auto; */
 }
 
 .card {
