--- a/src/App.css
+++ b/src/App.css
@@ -37,9 +37,10 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	margin-top: 5%;
-	max-height: 70%;
-	overflow-y: auto;
+	justify-content: center;
+	margin-top: 2%;
+
+	max-width: 90%;
 }
 
 .card {
@@ -53,7 +54,7 @@
 }
 
 .card img {
-	width: 200px;
+	width: 100px;
 	height: auto;
 	margin: 20px 0;
 	border-radius: 25px;
